# django-strava

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
strava/: README.md  admin.py  analytics.py  api.py  choices.py  consts.py  helpers.py  models.py  querysets.py  sport_icons.py  sports.py  urls.py  views.py
strava/management/commands/: import_strava.py  read_strava.py
strava/migrations/: 0001_initial.py  0002_alter_activity_options_activity_sport_type.py  0003_activity_distance.py  0004_promote_json_fields.py  0005_alter_activity_options_activity_calories.py  0006_activity_achievement_count_activity_comment_count_and_more.py  0007_activity_detailed_activity_polyline_and_more.py  0008_athlete.py  0009_activity_athlete_gear_athlete.py  0010_athlete_tokens.py  0011_seed_default_athlete.py  0012_activity_is_private.py
strava/services/: __init__.py  activities.py  analytics.py  compare.py  dashboard.py  gear.py  sync.py
strava/static/css/: activities.css  classic.css  gallery.css  gear.css  strava.css
strava/static/js/: activities.js  charts.js  classic-data.js  dashboard.js  data.js  gear.js
strava/templates/: README.md  activities.html  base.html  dashboard.html  gallery.html  gear.html
strava/templates/pages/: _activities_results.html  base.html  (+14 more)
strava/templatetags/: strava_athlete.py  strava_icons.py
tests/: settings.py  test_api.py  test_commands.py  test_model_properties.py  test_models.py  test_multi_athlete.py  test_querysets.py  test_sport_icons.py  test_templatetags.py  test_view_pages.py  test_views.py
(+44 files in other folders)
